--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "gradio>=6.5.1",
     "ipykernel>=7.2.0",
     "llama-index>=0.14.14",
+    "llama-index-embeddings-huggingface>=0.6.1",
+    "llama-index-vector-stores-chroma>=0.5.5",
     "pypdf>=6.7.0",
     "python-dotenv>=1.2.1",
     "uvicorn>=0.40.0",
