--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "ipykernel>=7.2.0",
     "llama-index>=0.14.14",
     "llama-index-embeddings-huggingface>=0.6.1",
+    "llama-index-postprocessor-cohere-rerank>=0.6.0",
     "llama-index-vector-stores-chroma>=0.5.5",
     "pypdf>=6.7.0",
     "python-dotenv>=1.2.1",
